<resources>
    <string name="app_name">PokiPoki</string>

    <string name="input_name_hint">Username</string>
    <string name="input_email_hint">Email</string>
    <string name="create_account">Create Account</string>
    <string name="input_password_hint">Password</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="tab_title">Title</string>
    <string name="profile">Profile</string>
    <string name="toolbar_title">PokiPoki</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>\

    <string name="header_text">SeamlessViewpagerHeader offers a Viewpager with a scrollable header, like Android Lollipop Contact.</string>
    <string name="empty_text">Empty</string>
    <string name="tab_country">Country</string>
    <string name="tab_continent">Continent</string>
    <string name="tab_city">City</string>
    <string name="tab_scroll_view">ScrollView</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="about">About Me</string>

    <!--CARDS add in different sets of cards-->
    <string name="cards">Cards</string>
    <string name="contact">Contact</string>
    <string name="header">Header</string>
    <string name="set_transition">settransi</string>
    <string name="set">Set</string>
    <string name="number">Number</string>
    <string name="favourite">Favorite Cards</string>
    <string name="separator">Separator</string>
    <string name="i_have">Cards I Have</string>

    <string name="event_name">Event name</string>
    <string name="event_date">Date of event</string>
    <string name="submit">SUBMIT</string>
    <string name="submission">Thanks for submitting your event!</string>


</resources>
