<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pokemeows.pokipoki.activities.CreateEventActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hello_text"
            android:padding="10dp"
            android:text="@string/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName" />

        <TextView
            android:padding="10dp"
            android:text="@string/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDate"
            android:inputType="date" />

        <Button
            android:id="@+id/SubmitEvent"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</RelativeLayout>
