<?xml version="1.0" encoding="utf-8"?>
<com.pokemeows.pokipoki.views.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/scrollview"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            />

        <TextView
            android:padding="10dp"
            android:text="@string/favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:contentDescription="@string/separator"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TableLayout
            android:id="@+id/profile_favourite_cards"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="10dp"
            android:text="@string/i_have"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:contentDescription="@string/separator"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TableLayout
            android:id="@+id/profile_cards_i_have"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</com.pokemeows.pokipoki.views.NotifyingScrollView>